[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Objects/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Option/Option.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Audio/UI/ui_pause.wav" type="AudioStream" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float lod = 0.0;

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, lod).rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/lod = 0.0

[sub_resource type="Animation" id=3]
resource_name = "pauseIn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.517633, 1 ),
"update": 0,
"values": [ Vector2( -640, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "pauseOut"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.353553, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -640, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "quit"
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonPosition/Buttons:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1.86607, 1 ),
"update": 0,
"values": [ Vector2( 128, 332 ), Vector2( -640, 332 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPosition" type="Position2D" parent="."]
position = Vector2( -640, 0 )

[node name="Buttons" type="VBoxContainer" parent="ButtonPosition"]
margin_left = 128.0
margin_top = 332.0
margin_right = 634.0
margin_bottom = 598.0
rect_rotation = -2.37776
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="ButtonPosition/Buttons" instance=ExtResource( 2 )]
margin_right = 506.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Options")

[node name="Options" parent="ButtonPosition/Buttons" instance=ExtResource( 2 )]
margin_top = 90.0
margin_right = 506.0
margin_bottom = 176.0
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../Quit")
text = "OPTIONS"

[node name="Quit" parent="ButtonPosition/Buttons" instance=ExtResource( 2 )]
margin_top = 180.0
margin_right = 506.0
margin_bottom = 266.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Resume")
text = "QUIT"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pauseIn = SubResource( 3 )
anims/pauseOut = SubResource( 4 )
anims/quit = SubResource( 5 )

[node name="Option" parent="." instance=ExtResource( 3 )]
layer = 5

[node name="PauseSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"
[connection signal="quitOption" from="." to="." method="_on_PauseMenu_quitOption"]
[connection signal="pressed" from="ButtonPosition/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="ButtonPosition/Buttons/Options" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonPosition/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
